--- a/index.html
+++ b/index.html
@@ -10,20 +10,15 @@
         </title>
 
     </head>
-    <body onload="refit()" style="padding:0;margin:0;">
+    <body style="padding:0;margin:0;">
        <iframe src="https://blog.jarhom.com/" style="width:100%;height:100%;"  frameborder="0" scrolling="yes"  id="bdIframe"></iframe>
     </body>
 </html>
 <script>
 
-function refit(){
-
- oIframe = document.getElementById('bdIframe');
-   deviceWidth = document.documentElement.clientWidth;
-      deviceHeight = document.documentElement.clientHeight;
-      oIframe.style.width = (Number(deviceWidth)) + 'px'; 
-      oIframe.style.height = (Number(deviceHeight)) + 'px';
-
-    }
+window.addEventListener("onorientationchange" in window ? "orientationchange" : "resize", function() {
+        $('#bdIframe').eq(0).css('width','100%');
+        $('#bdIframe').eq(0).css('height','100%')
+    }, false); 
 
 </script>
